# GrowBox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  QA.md  README.md  启动指南.md
.github/workflows/: ci.yml  release.yml
crates/growbox-core/: Cargo.toml
crates/growbox-core/src/: conclusion.rs  lib.rs  (+3 more)
crates/growbox-gui/: Cargo.toml  Info.plist  tauri.bundle-model.conf.json  tauri.conf.json
crates/growbox-gui/capabilities/: default.json
crates/growbox-gui/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
crates/growbox-gui/frontend/e2e/: debug-create-project.mjs  gui-test.mjs
crates/growbox-gui/frontend/src/: App.tsx  chat.ts  decisions.ts  drag-utils.ts  growbox-debug.ts  history.ts  i18n.ts  index.css  main.tsx  markdown.ts  notices.ts  projects.ts  sfx.ts  status.ts  store.ts  tauri-api.ts  toast.ts  tools.ts  ui-actions.ts
crates/growbox-gui/frontend/src/components/: AddPathModal.tsx  ArtifactCanvas.tsx  ChatArea.tsx  ChoicePopup.tsx  CloseConfirmDialog.tsx  ControlPanel.tsx  DreamPanel.tsx  HealthIndicator.tsx  HistoryDrawer.tsx  MemoryViz.tsx  PermissionDialog.tsx  ProjectCreateModal.tsx  Settings.tsx  ShellApprovalDialog.tsx  ShellTasks.tsx  Sidebar.tsx  StatusBar.tsx  SuggestionDialog.tsx  SystemHealthMonitor.tsx  TerminalPanel.tsx  ToastContainer.tsx
crates/growbox-gui/frontend/src/components/settings/: AdvancedTab.tsx  AgentTab.tsx  ConnectionTab.tsx  ToolsTab.tsx  state.ts
crates/growbox-gui/frontend/src/locales/: en.ts  ja.ts  zh-TW.ts
crates/growbox-gui/icons/: icon.icns
crates/growbox-gui/src/: arbiter.rs  artifact_fs.rs  branch_log.rs  bridge.rs  chat_control.rs  context_meter.rs  debug.rs  decision.rs  health.rs  helpers.rs  idle.rs  lib.rs  lsp.rs  main.rs  mcp.rs  notice_i18n.rs  notify.rs  outline.rs  privacy.rs  pty.rs  registry.rs  skill_proposals.rs  state.rs  supervisor.rs  tasks.rs  tool_i18n.rs  transpile.rs  transpile_store.rs  ui.rs  web_debug.rs  web_debug_runtime.js  workflow_store.rs
crates/growbox-gui/src/agent/: drive.rs  loop_tests.rs  mod.rs  render.rs  shell_gate.rs  tests.rs  types.rs
crates/growbox-gui/src/cmds/: chat.rs  config.rs  connection.rs  history.rs  mcp.rs  mod.rs  projects.rs  skill.rs  status.rs  transpile.rs
crates/growbox-gui/src/executors/: artifact_command.rs  ask_user.rs  code_outline.rs  code_search.rs  define_workflow.rs  file.rs  finish.rs  learn_process.rs  learn_skill.rs  load_skill.rs  lsp.rs  mod.rs  note_tool_memory.rs  open_debug_url.rs  project.rs  pty_tools.rs  push_artifact_notice.rs  render_artifact.rs  selftest_artifact.rs  set_appearance.rs  settings.rs  shell.rs  shutdown.rs  task.rs  tool_search.rs  ui_control.rs  web.rs  web_debug_drive.rs  workflow_return.rs
crates/growbox-gui/src/skills/: mod.rs
crates/growbox-gui/src/skills/seeds/: artifact-ui-craft.md  async-cancellation-discipline.md  commit-in-logical-units.md  delegate-subagent.md  disciplined-change.md  investigate-before-fix.md  name-and-shape-apis.md  optimize-by-measuring.md  orient-in-unfamiliar-code.md  plan-before-big-change.md  read-before-write.md  reply-formatting.md  review-your-diff.md  safe-refactor.md  self-test-with-auto-debug.md  solidjs-frontend-change.md  ui-respects-attention.md  verify-by-running.md  web-debug-source-locate.md  web-qa-self-feedback.md  write-tests-that-matter.md
crates/growbox-gui/tests/: e2e_comprehensive.rs  e2e_ui_debug.rs  live_agent.rs  live_artifact_diag.rs  live_chunk_doc.rs  live_lazy_agent.rs  live_lazy_cache.rs  live_precision_stage4.rs  live_ui_control.rs  notice_i18n_complete.rs  tool_i18n_complete.rs
crates/growbox-learn/: Cargo.toml
crates/growbox-learn/src/: flywheel.rs  lib.rs  scheduler.rs
crates/growbox-llm/: Cargo.toml
crates/growbox-llm/src/: client.rs  embed.rs  error.rs  lib.rs  local_e5.rs  stream.rs  types.rs
crates/growbox-llm/tests/: live_deepseek.rs
crates/growbox-memory/: Cargo.toml
crates/growbox-memory/examples/: dump_c2.rs  dump_timeline.rs  reset_memory.rs
crates/growbox-memory/src/: cache.rs  context.rs  fragments.rs  index.rs  lib.rs  node_kind.rs  pointer.rs  secondary.rs  skill_format.rs  store.rs  subconscious.rs  timeline.rs  tool_memory_format.rs
crates/growbox-memory/src/memory/: config.rs  maintenance.rs  mod.rs  perception.rs  retrieval.rs  tests.rs
crates/growbox-safety/: Cargo.toml
private/: README.md  docs.sha256  docs.tar.gz.enc  vault-manifest.md5
prompts/: notices.i18n.json  qwen3.6-chat-template-fixed.jinja  tools.i18n.json
prompts/agent/: self-evolution-system.md  system.en.md  system.md  system.zh.md
prompts/behavior/: guidance.md
prompts/cognitive/: framework.md
prompts/gui/: system.md
prompts/supervisor/: check.md  system.md
scripts/: build-official.sh  build-test.sh  check-i18n.mjs  dsk-agent.py  launch.sh  private-docs.sh  setup-dev-cert.sh  translate-i18n.mjs
scripts/helpers/: ShutdownHelper.applescript
设计文档/: 内部状态感知.md  异常告知.md  感知告知-双受众.md  打包设计.md  空桩与待接真登记.md  记忆置换系统-总纲.md  跨平台迁移方案.md
设计文档/二期项目/: README.md  二期计划.md  实验记录-C1懒加载与缓存.md
设计文档/具体系统设计/: 00-总览-依赖一览.md  README.md  core-共享类型与执行器.md  gui-应用与Agent循环.md  learn-飞轮.md  llm-通信与嵌入.md  memory-记忆系统.md  safety-安全沙箱.md  文档破碎化-长文检索盲区.md
设计文档/创世级更新计划/: README.md  内核随行-被造物毕业为独立程序.md
设计文档/可选研究方向/: README.md  多级队列的效用原理.md  本地检索加速-内置引擎与KV-prefill.md
设计文档/实验记录/: 00-deepseek-v4-flash.md  01-agent循环端到端.md  02-工作流最佳实践研究.md  README.md
设计文档/用户决策/: README.md  记忆架构-索引区与存放区.md
设计文档/系统架构/: 00-总览.md  01-core.md  02-llm.md  03-safety.md  04-memory.md  05-learn.md  06-app.md  README.md
设计文档/补遗/: README.md  做梦睡眠期也在检索.md
设计文档/计划/: P4-上下文组装层.md  agent-basics.md  embedding-service.md  precision-layer.md  storage-standards.md  工具记忆-不犯第二遍.md  指针-学习型边.md  提示词自转译.md  活的IDE-UI执行器.md  网页功能测试-人类QA工作流.md  网页调试窗-可视化框选改源.md  自关机能力.md  自驱续跑.md  被造物-自由展示与交互.md  记忆概念统一与面板对齐-实施指南.md  造物交互-v2.md
设计文档/设计/: 00-交互层.md  01-能力层.md  02-记忆检索.md  03-安全审查.md  04-飞轮学习.md  05-工具系统.md  06-多Agent协作.md  07-工作流机制.md  07-附录-子Agent三旋钮.md  07-附录-并行子代理.md  08-自我负责.md  09-Skill系统.md  README.md
设计文档/零散的交互以及设计细节/: 文件定点修改能力.md
(+12 files in other folders)
