[package]
name = "growbox-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
growbox-core = { path = "../growbox-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
thiserror.workspace = true
async-trait.workspace = true
# 本地 e5 嵌入(默认开;--no-default-features 可关掉以加速无需嵌入的迭代)。
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }

[features]
default = ["local-embed"]
local-embed = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]

[dev-dependencies]
tokio = { workspace = true }
